wip: improved GetSongs with pagination and filters
